# the-oasis-project-simulation-repo

./: .dockerignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.dev  FOUNDATION_NOTICE.md  GLOSSARY.md  README.md  pyproject.toml
docs/: DOCKER.md  api-reference.md  component-integration.md  guide.md
simulation/: __init__.py
simulation/hal/: __init__.py  device.py  network.py  platform.py  provider.py  status.py
simulation/layer0/: __init__.py  audio.py  camera.py  gpio.py  i2c.py  sensor.py  spi.py
simulation/layer1/: __init__.py  dap2_client.py  mqtt.py  ocp.py  status_listeners.py
simulation/layer2/: __init__.py  ha_mock.py  llm_http_server.py  llm_mock.py  memory_mock.py
tests/: test_layer0.py  test_layer1.py  test_layer2.py  test_provider.py  test_status.py  test_status_listeners.py
